--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "sparqler",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "This lightweight library enables querying multiple sparql endpoints",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublish": "gulp compile"
   },
   "repository": {
     "type": "git",
@@ -35,6 +36,7 @@
   },
   "homepage": "https://github.com/01Track1mp3/sparqler",
   "dependencies": {
+    "core-js": "^0.9.16",
     "lodash": "^3.3.1",
     "request": "^2.55.0"
   },
@@ -44,5 +46,11 @@
   "_id": "sparqler@1.0.0",
   "_shasum": "0f881cd4a5eebf34248afba27ec13340974d2ae6",
   "_from": "../../../../../../../var/folders/m5/_c_nqyrx6gn_7jmx6sdy6h200000gn/T/npm-9782-006768a7/git-cache-c92e4861e10a/631b42013196b6b841886c2ab8c536091d1d4693",
-  "_resolved": "git://github.com/01Track1mp3/sparqler#631b42013196b6b841886c2ab8c536091d1d4693"
+  "_resolved": "git://github.com/01Track1mp3/sparqler#631b42013196b6b841886c2ab8c536091d1d4693",
+  "devDependencies": {
+    "babel": "^5.5.6",
+    "gulp": "^3.9.0",
+    "gulp-babel": "^5.1.0",
+    "gulp-sourcemaps": "^1.5.2"
+  }
 }
