--- a/package.json
+++ b/package.json
@@ -3,13 +3,9 @@
   "version": "2.0.0",
   "description": "This lightweight library enables querying multiple sparql endpoints",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prepublish": "gulp compile"
-  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/01Track1mp3/sparqler"
+    "url": "https://github.com/mischkew/sparqler"
   },
   "keywords": [
     "sparql",
@@ -19,38 +15,45 @@
   "contributors": [
     {
       "name": "Sven Mischkewitz",
-      "email": "01Track1mp3"
+      "email": "mischkew"
     },
     {
       "name": "Nico Ring",
       "email": "nicoring"
-    },
-    {
-      "name": "Stefan Wehrmeyer",
-      "email": "stefanw"
     }
   ],
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/01Track1mp3/sparqler/issues"
+    "url": "https://github.com/mischkew/sparqler/issues"
   },
-  "homepage": "https://github.com/01Track1mp3/sparqler",
-  "dependencies": {
-    "core-js": "^0.9.16",
-    "lodash": "^3.3.1",
-    "request": "^2.55.0"
+  "homepage": "https://github.com/mischkew/sparqler",
+  "devDependencies": {
+    "babel-eslint": "^4.1.3",
+    "babel-jest": "^5.3.0",
+    "eslint": "^1.6.0",
+    "jest-cli": "^0.5.10"
+  },
+  "scripts": {
+    "test": "BABEL_JEST_STAGE=0 jest",
+    "lint": "eslint ./src"
+  },
+  "jest": {
+    "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
+    "testFileExtensions": [
+      "es6",
+      "js"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "es6"
+    ]
   },
   "gitHead": "631b42013196b6b841886c2ab8c536091d1d4693",
   "readme": "# Sparqler\nThis lightweight library enables querying multiple sparql endpoints.\n",
   "readmeFilename": "README.md",
-  "_id": "sparqler@1.0.0",
-  "_shasum": "0f881cd4a5eebf34248afba27ec13340974d2ae6",
-  "_from": "../../../../../../../var/folders/m5/_c_nqyrx6gn_7jmx6sdy6h200000gn/T/npm-9782-006768a7/git-cache-c92e4861e10a/631b42013196b6b841886c2ab8c536091d1d4693",
-  "_resolved": "git://github.com/01Track1mp3/sparqler#631b42013196b6b841886c2ab8c536091d1d4693",
-  "devDependencies": {
-    "babel": "^5.5.6",
-    "gulp": "^3.9.0",
-    "gulp-babel": "^5.1.0",
-    "gulp-sourcemaps": "^1.5.2"
+  "dependencies": {
+    "isomorphic-fetch": "^2.1.1",
+    "lodash": "^3.10.1"
   }
 }
