never mock lodash

--- a/package.json
+++ b/package.json
@@ -51,6 +51,9 @@
     ],
     "testPathDirs": [
       "src/"
+    ],
+    "unmockedModulePathPatterns": [
+      "lodash"
     ]
   },
   "gitHead": "631b42013196b6b841886c2ab8c536091d1d4693",
