--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "jest-cli": "^0.5.10"
   },
   "scripts": {
-    "test": "BABEL_JEST_STAGE=0 jest",
+    "test": "BABEL_JEST_STAGE=0 jest ./src",
+    "test:acceptance": "BABEL_JEST_STAGE=0 jest --config=./acceptanceTestConfig.json",
     "watch:test": "nodemon -w __tests__ -w ./src -e js,jsx -x npm test",
     "lint": "eslint ./src"
   },
